--- a/src/sass/module/_pagination.scss
+++ b/src/sass/module/_pagination.scss
@@ -25,6 +25,7 @@
   font-size: rem(16);
   margin: 0 rem(6);
   font-family: "Lato",  sans-serif;
+  position: relative;
 }
 
 .pagination-nav span {
@@ -36,6 +37,7 @@
   font-size: rem(16);
   font-family: "Lato",  sans-serif;
   margin: 0 rem(5);
+  position: relative;
 }
 
 .pagination-nav a:first-child {
@@ -57,7 +59,7 @@
   height: rem(11);
   position: absolute;
   transform: rotate(-135deg);
-  left: 8.5%;
+  left: 40.5%;
   top: 35%;
 
 }
@@ -81,6 +83,6 @@
   height: rem(11);
   position: absolute;
   transform: rotate(45deg);
-  right: 8.5%;
+  right: 44.5%;
   top: 35%;
 }
