--- a/src/sass/page/_campaign-page.scss
+++ b/src/sass/page/_campaign-page.scss
@@ -121,7 +121,7 @@
   }
 }
 
-.campaign-page-campaign-card__img {
+.campaign-page-contents__card-img {
   max-width: rem(280);
   width: 100%;
 
@@ -130,7 +130,7 @@
   }
 }
 
-.campaign-page-campaign-card__img img {
+.campaign-page-contents__card-img img {
   aspect-ratio: 280/188;
   object-fit: cover;
   width: 100%;
@@ -140,7 +140,7 @@
   }
 }
 
-.campaign-page-campaign-card__body {
+.campaign-page-contents__card-body {
   padding-top: rem(16);
   padding-right: rem(17);
   padding-bottom: rem(17);
@@ -157,6 +157,10 @@
   }
 }
 
+.campaign-page-contents__card-price {
+  margin-top: rem(26.5);
+}
+
 .campaign-page-campaign-card-text__title-sub {
   font-weight: $medium;
   font-family: "Noto Sans JP", serif;
@@ -168,7 +172,7 @@
   }
 }
 
-.campaign-page-campaign-text-line {
+.campaign-page-contents__text-line {
   background-color: $green; /* 横線の色 */
   content: "";
   height: rem(1.5); /* 横線の高さ */
@@ -180,11 +184,30 @@
   }
 }
 
+.campaign-page-contents__price-new {
+  font-size: rem(32);
+  font-weight: $bold;
+  color: $green;
+  margin-left: rem(18);
+  font-family: "Lato", sans-serif;
+
+  @include mq("md") {
+    font-size: rem(40);
+    // margin-top: rem(-5);
+    margin-left: rem(42);
+  }
+}
+
+.campaign-page-contents__text-box {
+  margin-top: rem(15);
+}
+
 .campaign-page-campaign-card__date {
   color: $green;
   font-size: rem(16);
   font-weight: $bold;
   text-align: center;
+  margin-top: rem(27);
 }
 
 .campaign-page-campaign-card__reserve {
@@ -193,6 +216,7 @@
   font-weight: $regular;
   font-family: "Noto Sans JP", serif;
   text-align: center;
+  margin-top: rem(3);
 }
 
 .campaign-page__contact-top {
