--- a/src/sass/page/_campaign-page.scss
+++ b/src/sass/page/_campaign-page.scss
@@ -121,13 +121,20 @@
   }
 }
 
+.campaign-page-contents__item {
+    max-width: rem(600);
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+
 .campaign-page-contents__card-img {
-  max-width: rem(280);
+  // max-width: rem(280);
   width: 100%;
 
-  @include mq("md") {
-    max-width: rem(520);
-  }
+  // @include mq("md") {
+  //   max-width: rem(520);
+  // }
 }
 
 .campaign-page-contents__card-img img {
@@ -208,6 +215,7 @@
   font-weight: $bold;
   text-align: center;
   margin-top: rem(27);
+  font-family: "Lato", sans-serif;
 }
 
 .campaign-page-campaign-card__reserve {
