--- a/src/sass/page/_campaign__container.scss
+++ b/src/sass/page/_campaign__container.scss
@@ -1,5 +1,23 @@
 @use "global" as *;
 
+  .campaign__container-slider-slide {
+    display: flex;
+    margin-bottom: rem(10);
+    width: rem(280);
+    height: auto;
+  }
+
+
+.campaign__container-button-box {
+  display: flex;
+  position: absolute;
+  top: 1.5%;
+  right: 12.5%;
+  max-width: rem(240);
+  gap: rem(80);
+}
+
+
 /* 前へ次への矢印カスタマイズ */
 .campaign__container-button-prev,
 .campaign__container-button-next {
@@ -48,3 +66,4 @@
   top: 0;
   }
 }
+
