--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -31,3 +31,215 @@
     position: relative;
   }
 }
+
+.campaign__container-slide {
+  display: flex;
+  margin-bottom: rem(10);
+  width: rem(280);
+  height: auto;
+}
+
+
+.campaign-card {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
+  height: 100%;
+}
+
+.campaign-card__img {
+  max-width: rem(280);
+  width: 100%;
+
+  @include mq("md") {
+    max-width: rem(333);
+  }
+}
+
+.campaign-card__img img {
+  aspect-ratio: 280/188;
+  object-fit: cover;
+  width: 100%;
+
+  @include mq("md") {
+    aspect-ratio: 333/223;
+  }
+}
+
+.campaign-card__body {
+  padding-top: rem(16);
+  padding-right: rem(17);
+  padding-bottom: rem(17);
+  padding-left: rem(16);
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+
+  @include mq("md") {
+    padding-top: rem(22);
+    padding-right: rem(17);
+    padding-bottom: rem(30);
+    padding-left: rem(17);
+  }
+}
+.campaign-card__text {
+  flex: 1;
+}
+
+.campaign-card__title {
+  font-size: rem(12);
+  color: $green;
+  border: rem(1) solid $green;
+  padding: rem(7) rem(10) rem(3.5) rem(12);
+  white-space: nowrap;
+  box-sizing: border-box;
+  overflow: hidden;
+  display: inline-flex;
+  font-family: "Noto Sans JP", serif;
+
+  @include mq("md") {
+  padding: rem(8) rem(15) rem(6) rem(14);
+  }
+}
+
+.campaign-card__title-sub {
+  font-weight: $medium;
+  font-family: "Noto Sans JP", serif;
+  margin-top: rem(5);
+}
+
+.campaign-card__text-line {
+  background-color: $green; /* 横線の色 */
+  content: "";
+  height: rem(1.5); /* 横線の高さ */
+  margin-top: rem(5);
+
+  @include mq("md") {
+    height: rem(1);
+  }
+}
+
+.campaign-card__price {
+  margin-top: rem(10);
+
+  @include mq("md") {
+    margin-top: rem(19);
+  }
+}
+
+.campaign-card__price-text {
+  font-size: rem(14);
+  font-weight: $regular;
+  font-family: "Noto Sans JP", serif;
+  text-align: center;
+
+  @include mq("md") {
+    font-size: rem(16);
+    text-align: center;
+  }
+}
+
+.campaign-card__price-box {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  font-family: Lato;
+}
+
+.campaign-card__price-old {
+  font-size: rem(20);
+  font-weight: $bold;
+  text-decoration: line-through;
+  text-decoration-color: $red;
+  text-decoration-thickness: rem(3);
+  font-family: "Lato", sans-serif;
+
+  @include mq("md") {
+    font-size: rem(24);
+    line-height: 1;
+  }
+}
+
+.campaign-card__price-new {
+  font-size: rem(32);
+  font-weight: $bold;
+  color: $green;
+  margin-left: rem(18);
+  font-family: "Lato", sans-serif;
+
+  @include mq("md") {
+    font-size: rem(40);
+    margin-top: rem(-5);
+    margin-left: rem(27);
+  }
+}
+
+
+.campaign__container-button-box {
+display: flex;
+position: absolute;
+top: 1.5%;
+right: 12.5%;
+max-width: rem(240);
+gap: rem(80);
+}
+
+
+/* 前へ次への矢印カスタマイズ */
+.campaign__container-button-prev,
+.campaign__container-button-next {
+display: none;
+
+@include mq("md") {
+  width: rem(80);
+  height: rem(80);
+  display: block;
+}
+}
+
+.campaign__container-button-prev:hover,
+.campaign__container-button-next:hover {
+opacity: 0.7;
+transition: 0.3s;
+cursor: pointer;
+}
+
+/* 前への矢印カスタマイズ */
+.campaign__container-button-prev::after {
+
+@include mq("md") {
+background-repeat: no-repeat;
+background-size: contain;
+content: "";
+background-image: url(/assets/images/arrow1.svg);
+width: rem(80);
+height: rem(80);
+display: block;
+top: 0;
+}
+}
+
+/* 次への矢印カスタマイズ */
+.campaign__container-button-next:after  {
+
+@include mq("md") {
+background-repeat: no-repeat;
+background-size: contain;
+content: "";
+background-image: url(/assets/images/arrow2.svg);
+width: rem(80);
+height: rem(80);
+display: block;
+top: 0;
+}
+}
+
+.campaign__button-layout {
+  margin-top: rem(30);
+  text-align: center;
+
+  @include mq("md") {
+    margin-top: rem(70);
+  }
+}
