--- a/src/sass/page/_mv__slider.scss
+++ b/src/sass/page/_mv__slider.scss
@@ -11,3 +11,10 @@
     width: 100%;
     object-fit: cover;
 }
+
+
+/* 画像サイズ調整 */
+.mv__slider.swiper-slide img {
+    height: 100vh;
+    width: 100%;
+  }
